--- a/public_html/index.html
+++ b/public_html/index.html
@@ -143,7 +143,7 @@
 			<!-- row -->
 			<div class="row">
 				<!-- section title -->
-				<div class="section-title ">
+				<div class="section-title fade">
 					<h3 class="title"><span>O</span> <span style="color: #0b0f28;">Evento</span></h3>
 				</div>
 				<!-- /section title -->
@@ -151,19 +151,19 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<div align="left"><p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
+						<div align="left"><p class="fade">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
 							século XVI.
 							O processo de secularização nas ciências, bem como na sociedade,
 							tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
 							contribuíram diretamente para o avanço do desenvolvimento social,
 							tecnológico e dos direitos humanos. </p>
-						<p class="">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano “Cosmovisão Cristã
+						<p class="fade">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano “Cosmovisão Cristã
 							para o
 							Desenvolvimento e Justiça Social” e apresenta como objetivos principais a discussão e a socialização de teorias
 							e metodologias fundadas na
 							Cosmovisão Cristã para análises de realidades humanas compreendidas em sua totalidade humanística, tecnológica,
 							social e espiritual. </p>
-						<p class="">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
+						<p class="fade">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
 							para
 							participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate crítico
 							e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social para
@@ -186,11 +186,11 @@
 		<!-- /background image -->
 
 		<!-- container -->
-		<div class="container ">
+		<div class="container fade">
 			<!-- container -->
 			<div class="row">
 				<!-- cta content -->
-				<div class="col-md-8 col-md-offset-2 ">
+				<div class="col-md-8 col-md-offset-2 fade">
 					<div class="cta-content text-center">
 						<h2>Participe!</h2>
 						<p class="lead">Aproveite! O sistema de Inscrição será exclusivamente por meio do site, de acordo com o
@@ -224,7 +224,7 @@
 
 					<div class="events-wrapper">
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-day">
 								<div>
 									<span class="day">22</span>
@@ -240,7 +240,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 8h : 30min - 9h : 00min</p>
@@ -252,7 +252,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 00min - 09 : 30min</p>
@@ -263,7 +263,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 12 : 00min</p>
@@ -274,7 +274,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 13h : 00min - 15 : 00min</p>
@@ -286,7 +286,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 16 : 00min</p>
@@ -298,7 +298,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 19h : 00min - 20 : 30min</p>
@@ -310,7 +310,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 20h : 00min - 22 : 00min</p>
@@ -321,7 +321,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event ">
+						<div class="event fade">
 							<div class="event-day">
 								<div>
 									<span class="day">23</span>
@@ -338,7 +338,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event ">
+					<div class="event fade">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 10h : 00min - 12 : 00min</p>
@@ -349,7 +349,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event ">
+					<div class="event fade">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 13h : 15min - 14 : 30min</p>
@@ -360,7 +360,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event ">
+					<div class="event fade">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 14 : 30min - 15 : 00min</p>
@@ -370,9 +370,8 @@
 					</div>
 					<!-- /event -->
 
-
 					<!-- event -->
-					<div class="event ">
+					<div class="event fade">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 30min</p>
@@ -383,7 +382,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event ">
+					<div class="event fade">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i>17 : 30min</p>
@@ -418,7 +417,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
-							<img src="./img/palestrante01.png" alt="">
+							<img src="./img/p1.jpg" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -428,8 +427,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>Gustavo Assi</h2>
-								<span>Professor, Doutor em Aeoronautics</span>
+								<h2>Dr. Gustavo Assi</h2>
+								<span>Professor, Doutor</span>
 							</div>
 						</div>
 					</div>
@@ -440,7 +439,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-2">
 						<div class="speaker-img">
-							<img src="./img/palestrante02.png" alt="">
+							<img src="./img/speaker02.jpg" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -462,71 +461,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
-							<img src="./img/palestrante03.png" alt="">
-						</div>
-						<div class="speaker-body">
-							<div class="speaker-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-instagram"></i></a>
-								<a href="#"><i class="fa fa fa-linkedin"></i></a>
-							</div>
-							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker -->
-				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
-						<div class="speaker-img">
-							<img src="./img/palestrante04.png" alt="">
-						</div>
-						<div class="speaker-body">
-							<div class="speaker-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-instagram"></i></a>
-								<a href="#"><i class="fa fa fa-linkedin"></i></a>
-							</div>
-							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker -->
-				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
-						<div class="speaker-img">
-							<img src="./img/palestrante05.png" alt="">
-						</div>
-						<div class="speaker-body">
-							<div class="speaker-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-instagram"></i></a>
-								<a href="#"><i class="fa fa fa-linkedin"></i></a>
-							</div>
-							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /speaker -->
-
-				<!-- speaker -->
-				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
-						<div class="speaker-img">
-							<img src="./img/palestrante06.png" alt="">
+							<img src="./img/speaker03.jpg" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -545,7 +480,7 @@
 				<!-- /speaker -->
 
 				<!-- speaker modal -->
-				<div id="speaker-modal-2" class="speaker-modal modal ">
+				<div id="speaker-modal-2" class="speaker-modal modal fade">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
@@ -676,17 +611,17 @@
 			<div class="row">
 
 				<!-- footer logo -->
-				<!-- <div class="col-md-4 col-md-push-4">
+				<div class="col-md-4 col-md-push-4">
 					<div class="footer-brand">
 						<a class="logo-alt-img" href="index.html">
 							<img class="logo-img" src="./img/logo.png" alt="logo">
 						</a>
 					</div>
-				</div> -->
+				</div>
 				<!-- /footer logo -->
 
 				<!-- contact social -->
-				<div class="col-md-5 col-md-offset-2 text-center">
+				<div class="col-md-4 col-md-push-4">
 					<div class="contact-social">
 						<a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-instagram"></i></a>
@@ -698,7 +633,7 @@
 
 				<!-- copyright -->
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<span class="copyright" style="color:white;">
+					<span class="copyright">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<p>II Semana de Ciência, Fé e Desenvolvimento Social</p>
 						<p>2018 - Currais Novos - RN</p>
@@ -719,9 +654,12 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.stellar.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+	<script src="js/google-map.js"></script>
 	<script src="js/jquery.countTo.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/timer.js"></script>
+	<script src="js/scrollfade.js"></script>
 
 
 </body>
