--- a/public_html/index.html
+++ b/public_html/index.html
@@ -143,7 +143,7 @@
 			<!-- row -->
 			<div class="row">
 				<!-- section title -->
-				<div class="section-title fade">
+				<div class="section-title ">
 					<h3 class="title"><span>O</span> <span style="color: #0b0f28;">Evento</span></h3>
 				</div>
 				<!-- /section title -->
@@ -151,24 +151,25 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<div align="left"><p class="fade">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
-							século XVI.
-							O processo de secularização nas ciências, bem como na sociedade,
-							tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
-							contribuíram diretamente para o avanço do desenvolvimento social,
-							tecnológico e dos direitos humanos. </p>
-						<p class="fade">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano “Cosmovisão Cristã
-							para o
-							Desenvolvimento e Justiça Social” e apresenta como objetivos principais a discussão e a socialização de teorias
-							e metodologias fundadas na
-							Cosmovisão Cristã para análises de realidades humanas compreendidas em sua totalidade humanística, tecnológica,
-							social e espiritual. </p>
-						<p class="fade">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
-							para
-							participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate crítico
-							e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social para
-							construção de uma sociedade mais justa e fraternalmente solidária.</p>
-							</div>
+						<div align="left">
+							<p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
+								século XVI.
+								O processo de secularização nas ciências, bem como na sociedade,
+								tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
+								contribuíram diretamente para o avanço do desenvolvimento social,
+								tecnológico e dos direitos humanos. </p>
+							<p class="">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano “Cosmovisão Cristã
+								para o
+								Desenvolvimento e Justiça Social” e apresenta como objetivos principais a discussão e a socialização de teorias
+								e metodologias fundadas na
+								Cosmovisão Cristã para análises de realidades humanas compreendidas em sua totalidade humanística, tecnológica,
+								social e espiritual. </p>
+							<p class="">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
+								para
+								participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate crítico
+								e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social para
+								construção de uma sociedade mais justa e fraternalmente solidária.</p>
+						</div>
 					</div>
 					<!-- /about content -->
 				</div>
@@ -186,11 +187,11 @@
 		<!-- /background image -->
 
 		<!-- container -->
-		<div class="container fade">
+		<div class="container ">
 			<!-- container -->
 			<div class="row">
 				<!-- cta content -->
-				<div class="col-md-8 col-md-offset-2 fade">
+				<div class="col-md-8 col-md-offset-2 ">
 					<div class="cta-content text-center">
 						<h2>Participe!</h2>
 						<p class="lead">Aproveite! O sistema de Inscrição será exclusivamente por meio do site, de acordo com o
@@ -224,7 +225,7 @@
 
 					<div class="events-wrapper">
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-day">
 								<div>
 									<span class="day">22</span>
@@ -240,7 +241,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 8h : 30min - 9h : 00min</p>
@@ -252,7 +253,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 00min - 09 : 30min</p>
@@ -263,7 +264,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 12 : 00min</p>
@@ -274,7 +275,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 13h : 00min - 15 : 00min</p>
@@ -286,7 +287,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 16 : 00min</p>
@@ -298,7 +299,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 19h : 00min - 20 : 30min</p>
@@ -310,7 +311,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-hour"></div>
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 20h : 00min - 22 : 00min</p>
@@ -321,7 +322,7 @@
 						<!-- /event -->
 
 						<!-- event -->
-						<div class="event fade">
+						<div class="event ">
 							<div class="event-day">
 								<div>
 									<span class="day">23</span>
@@ -338,7 +339,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event fade">
+					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 10h : 00min - 12 : 00min</p>
@@ -349,7 +350,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event fade">
+					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 13h : 15min - 14 : 30min</p>
@@ -360,7 +361,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event fade">
+					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 14 : 30min - 15 : 00min</p>
@@ -370,8 +371,9 @@
 					</div>
 					<!-- /event -->
 
+
 					<!-- event -->
-					<div class="event fade">
+					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 30min</p>
@@ -382,7 +384,7 @@
 					<!-- /event -->
 
 					<!-- event -->
-					<div class="event fade">
+					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
 							<p class="event-time"><i class="fa fa-clock-o"></i>17 : 30min</p>
@@ -417,7 +419,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
-							<img src="./img/p1.jpg" alt="">
+							<img src="./img/palestrante01.png" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -427,8 +429,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>Dr. Gustavo Assi</h2>
-								<span>Professor, Doutor</span>
+								<h2>Gustavo Assi</h2>
+								<span>Professor, Doutor em Aeoronautics</span>
 							</div>
 						</div>
 					</div>
@@ -439,7 +441,7 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-2">
 						<div class="speaker-img">
-							<img src="./img/speaker02.jpg" alt="">
+							<img src="./img/palestrante02.png" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -461,7 +463,71 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
 						<div class="speaker-img">
-							<img src="./img/speaker03.jpg" alt="">
+							<img src="./img/palestrante03.png" alt="">
+						</div>
+						<div class="speaker-body">
+							<div class="speaker-social">
+								<a href="#"><i class="fa fa-facebook"></i></a>
+								<a href="#"><i class="fa fa-twitter"></i></a>
+								<a href="#"><i class="fa fa-instagram"></i></a>
+								<a href="#"><i class="fa fa fa-linkedin"></i></a>
+							</div>
+							<div class="speaker-content">
+								<h2>John Doe</h2>
+								<span>Manager, CEO</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /speaker -->
+				<!-- speaker -->
+				<div class="col-md-4 col-sm-6">
+					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+						<div class="speaker-img">
+							<img src="./img/palestrante04.png" alt="">
+						</div>
+						<div class="speaker-body">
+							<div class="speaker-social">
+								<a href="#"><i class="fa fa-facebook"></i></a>
+								<a href="#"><i class="fa fa-twitter"></i></a>
+								<a href="#"><i class="fa fa-instagram"></i></a>
+								<a href="#"><i class="fa fa fa-linkedin"></i></a>
+							</div>
+							<div class="speaker-content">
+								<h2>John Doe</h2>
+								<span>Manager, CEO</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /speaker -->
+				<!-- speaker -->
+				<div class="col-md-4 col-sm-6">
+					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+						<div class="speaker-img">
+							<img src="./img/palestrante05.png" alt="">
+						</div>
+						<div class="speaker-body">
+							<div class="speaker-social">
+								<a href="#"><i class="fa fa-facebook"></i></a>
+								<a href="#"><i class="fa fa-twitter"></i></a>
+								<a href="#"><i class="fa fa-instagram"></i></a>
+								<a href="#"><i class="fa fa fa-linkedin"></i></a>
+							</div>
+							<div class="speaker-content">
+								<h2>John Doe</h2>
+								<span>Manager, CEO</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /speaker -->
+
+				<!-- speaker -->
+				<div class="col-md-4 col-sm-6">
+					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+						<div class="speaker-img">
+							<img src="./img/palestrante06.png" alt="">
 						</div>
 						<div class="speaker-body">
 							<div class="speaker-social">
@@ -480,7 +546,7 @@
 				<!-- /speaker -->
 
 				<!-- speaker modal -->
-				<div id="speaker-modal-2" class="speaker-modal modal fade">
+				<div id="speaker-modal-2" class="speaker-modal modal ">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
@@ -551,13 +617,13 @@
 			<div class="row">
 				<!-- section title -->
 				<div class="section-title">
-					<h3 class="title" style="color:white;" ><span>Colaboradores</span></h3>
+					<h3 class="title" style="color:white;"><span>Colaboradores</span></h3>
 				</div>
 				<!-- /section title -->
 
 				<!-- sponsor -->
 				<div class="center-block">
-						<img class="center-block" src="./img/barra_realizacao.png" style="max-width: 70em; height:auto;" alt="">
+					<img class="center-block" src="./img/barra_realizacao.png" style="max-width: 70em; height:auto;" alt="">
 				</div>
 				<!-- /sponsor -->
 
@@ -587,18 +653,19 @@
 
 		<!-- Map -->
 		<div class=pyn--map-container>
-            <span class=pyn--dot-overlay></span>
-            <div class=container>
-                <div class=row>
-                    <div class="col-md-7 col-md-push-5">
-                        <div class="pyn--map-frame embed-responsive embed-responsive-4by3">
-                            
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7932.164221739524!2d-36.534798537676316!3d-6.252911715387269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b1d5e8709765b9%3A0x302b8055cbe5d361!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+Rio+Grande+do+Norte%2C+Campus+Currais+Novos!5e0!3m2!1spt-BR!2sbr!4v1466890443774" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+			<span class=pyn--dot-overlay></span>
+			<div class=container>
+				<div class=row>
+					<div class="col-md-7 col-md-push-5">
+						<div class="pyn--map-frame embed-responsive embed-responsive-4by3">
+
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7932.164221739524!2d-36.534798537676316!3d-6.252911715387269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b1d5e8709765b9%3A0x302b8055cbe5d361!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+Rio+Grande+do+Norte%2C+Campus+Currais+Novos!5e0!3m2!1spt-BR!2sbr!4v1466890443774"
+							 width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!-- /Map -->
 	</div>
 	<!-- /Contact -->
@@ -611,33 +678,34 @@
 			<div class="row">
 
 				<!-- footer logo -->
-				<div class="col-md-4 col-md-push-4">
+				<!-- <div class="col-md-4 col-md-push-4">
 					<div class="footer-brand">
 						<a class="logo-alt-img" href="index.html">
 							<img class="logo-img" src="./img/logo.png" alt="logo">
 						</a>
 					</div>
-				</div>
+				</div> -->
 				<!-- /footer logo -->
 
 				<!-- contact social -->
-				<div class="col-md-4 col-md-push-4">
+				<div class="col-md-5 col-md-offset-2 text-center">
 					<div class="contact-social">
 						<a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-instagram"></i></a>
 						<a href="#"><i class="fa fa-youtube"></i></a>
-						
+
 					</div>
 				</div>
 				<!-- /contact social -->
 
 				<!-- copyright -->
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<span class="copyright">
+					<span class="copyright" style="color:white;">
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						<p>II Semana de Ciência, Fé e Desenvolvimento Social</p>
 						<p>2018 - Currais Novos - RN</p>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					</span>
 				</div>
 				<!-- /copyright -->
 
@@ -654,12 +722,9 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/jquery.stellar.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-	<script src="js/google-map.js"></script>
 	<script src="js/jquery.countTo.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/timer.js"></script>
-	<script src="js/scrollfade.js"></script>
 
 
 </body>
