--- a/public_html/index.html
+++ b/public_html/index.html
@@ -430,7 +430,7 @@
 							</div>
 							<div class="speaker-content">
 								<h2>Gustavo Assi</h2>
-								<span>Professor, Doutor em Aeoronautics</span>
+								<span>Professor, Doutor em Aeoronáutica</span>
 							</div>
 						</div>
 					</div>
@@ -451,7 +451,7 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>John Doe</h2>
+								<h2>Bento João</h2>
 								<span>Manager, CEO</span>
 							</div>
 						</div>
