--- a/public_html/index.html
+++ b/public_html/index.html
@@ -151,7 +151,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<!-- about content -->
 					<div class="about-content">
-						<div align="left">
+						<div style="float:left;">
 							<p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
 								século XVI.
 								O processo de secularização nas ciências, bem como na sociedade,
@@ -269,7 +269,7 @@
 							<div class="event-content">
 								<p class="event-time"><i class="fa fa-clock-o"></i> 9h : 30min - 12 : 00min</p>
 								<h3 class="event-title">Decifrando sombras: avaliando os limites e a relação entre a ciência e a fé cristã</h3>
-								<p>por <a href="#">Dr. Gustavo Assi</a></p>
+								<p>por <a data-toggle="modal" data-target="#speaker-modal-1" href="">Dr. Gustavo Assi</a></p>
 							</div>
 						</div>
 						<!-- /event -->
@@ -429,8 +429,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>Gustavo Assi</h2>
-								<span>Professor, Doutor em Aeoronáutica</span>
+								<h3 style="color: white;">Gustavo Assi</h3>
+								<span>Doutor em Aeoronáutica</span>
 							</div>
 						</div>
 					</div>
@@ -451,8 +451,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>Bento João</h2>
-								<span>Manager, CEO</span>
+								<h3 style="color: white;">Bento João</h3>
+								<span>Doutor em Biologia Celular</span>
 							</div>
 						</div>
 					</div>
@@ -461,7 +461,7 @@
 
 				<!-- speaker -->
 				<div class="col-md-4 col-sm-6">
-					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
+					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-3">
 						<div class="speaker-img">
 							<img src="./img/palestrante03.jpg" alt="">
 						</div>
@@ -473,13 +473,14 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
+								<h3 style="color: white;">Henrique Alonso</h3>
+								<span>Doutor em História</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<!-- /speaker -->
+
 				<!-- speaker -->
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
@@ -494,13 +495,14 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
+								<h3 style="color: white;">Edu Albuquerque</h3>
+								<span>Doutor em Geografia</span>
 							</div>
 						</div>
 					</div>
 				</div>
 				<!-- /speaker -->
+
 				<!-- speaker -->
 				<div class="col-md-4 col-sm-6">
 					<div class="speaker" data-toggle="modal" data-target="#speaker-modal-1">
@@ -515,8 +517,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
+								<h3 style="color: white;">Roberto Monteiro</h3>
+								<span>Doutor em Recursos Naturais</span>
 							</div>
 						</div>
 					</div>
@@ -537,8 +539,8 @@
 								<a href="#"><i class="fa fa fa-linkedin"></i></a>
 							</div>
 							<div class="speaker-content">
-								<h2>John Doe</h2>
-								<span>Manager, CEO</span>
+								<h3 style="color: white;">Bruno Gomes</h3>
+								<span>Doutor em Geografia</span>
 							</div>
 						</div>
 					</div>
@@ -546,7 +548,7 @@
 				<!-- /speaker -->
 
 				<!-- speaker modal -->
-				<div id="speaker-modal-2" class="speaker-modal modal ">
+				<div id="speaker-modal-1" class="speaker-modal modal ">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
@@ -554,27 +556,27 @@
 								<div class="row">
 									<div class="col-md-5">
 										<div class="speaker-modal-img">
-											<img src="./img/speaker-info.jpg" alt="">
+											<img src="./img/p1.jpg" alt="">
 										</div>
 									</div>
 									<div class="col-md-7">
 										<div class="speaker-modal-content">
-											<h2 class="speaker-name">John Doe</h2>
-											<span class="speaker-job">- Manager, CEO</span>
+											<h2 class="speaker-name">Gustavo Assi</h2>
+											<span class="speaker-job">- Doutor em Aeoronáutica</span>
 
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-												dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-												ea commodo consequat. Duis aute
-												irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-												occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											<p>O Prof. Dr. Gustavo Roque da Silva Assi é docente da Escola Politécnica da Universidade de São Paulo.
+												Atua como Coordenador do Curso de Graduação em Engenhara Naval da EPUSP e membro da CRInt Comissão de
+												Relações Internacionais da EPUSP. Bolsista de Produtividade em Pesquisa do CNPq, atua como Coordenador do
+												Laboratório de Hidrodinâmica Experimental do NDF Núcleo de Dinâmica e Fluidos da EPUSP.
+											</p>
 
-											<div class="speaker-website">
+											<!-- <div class="speaker-website">
 												<h4>Website</h4>
 												<a href="#">www.johndoe.com</a>
-											</div>
+											</div> -->
 
 											<div class="speaker-social">
-												<h4>Social Profile</h4>
+												<h4>Redes Sociais</h4>
 												<a href="#"><i class="fa fa-facebook"></i></a>
 												<a href="#"><i class="fa fa-twitter"></i></a>
 												<a href="#"><i class="fa fa-instagram"></i></a>
@@ -582,15 +584,21 @@
 											</div>
 
 											<div class="speaker-events">
-												<h4>Sessions</h4>
+												<h4>Sessões</h4>
 												<div class="speaker-event">
-													<span><strong>Day 1 -</strong> February 20, 2018 8 : 00 AM - 11 : 00 AM</span>
-													<p>His id altera fabellas facilisis. Has eros assueverit cu</p>
+													<span>22 de Novembro, 2018 9 : 30 AM - 12 : 00 PM</span>
+													<p>Decifrando sombras: avaliando os limites e a relação entre a ciência e a fé cristã</p>
 												</div>
 
 												<div class="speaker-event">
-													<span><strong>Day 2 -</strong> February 20, 2018 8 : 00 AM - 11 : 00 AM</span>
-													<p>At mucius deserunt delicatissimi eam, labitur detraxit ut sit</p>
+													<span>22 de Novembro, 2018 15 : 00 PM - 16 : 00 PM</span>
+													<p>Reconhecendo as bases para o desenvolvimento sustentável: reflexões nos campos da engenharia e da
+														comunicação</p>
+												</div>
+
+												<div class="speaker-event">
+													<span>22 de Novembro, 2018 20 : 00 PM - 22 : 00 PM</span>
+													<p>Mesa Redonda (Ciência e Fé)</p>
 												</div>
 											</div>
 
@@ -602,6 +610,115 @@
 					</div>
 				</div>
 				<!-- /speaker modal -->
+
+
+				<!-- speaker modal -->
+				<div id="speaker-modal-2" class="speaker-modal modal ">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-md-5">
+										<div class="speaker-modal-img">
+											<img src="./img/p2.jpg" alt="">
+										</div>
+									</div>
+									<div class="col-md-7">
+										<div class="speaker-modal-content">
+											<h2 class="speaker-name">Bento João</h2>
+											<span class="speaker-job">- Doutor em Biologia Celular</span>
+
+											<p>Doutor em Biologia Celular (UFMG) e Professor Associado de Anatomia Humana (UFRN);
+											</p>
+
+											<!-- <div class="speaker-website">
+												<h4>Website</h4>
+												<a href="#">www.johndoe.com</a>
+											</div> -->
+
+											<div class="speaker-social">
+												<h4>Redes Sociais</h4>
+												<a href="#"><i class="fa fa-facebook"></i></a>
+												<a href="#"><i class="fa fa-twitter"></i></a>
+												<a href="#"><i class="fa fa-instagram"></i></a>
+												<a href="#"><i class="fa fa fa-linkedin"></i></a>
+											</div>
+
+											<div class="speaker-events">
+												<h4>Sessões</h4>
+												<div class="speaker-event">
+													<span>23 de Novembro, 2018 15 : 00 PM - 17 : 30 PM</span>
+													<p>Perspectiva histórica sobre a busca anatômica pela alma</p>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /speaker modal -->
+
+				<!-- speaker modal -->
+				<div id="speaker-modal-3" class="speaker-modal modal ">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-md-5">
+										<div class="speaker-modal-img">
+											<img src="./img/p3.jpg" alt="">
+										</div>
+									</div>
+									<div class="col-md-7">
+										<div class="speaker-modal-content">
+											<h2 class="speaker-name">Henrique Alonso</h2>
+											<span class="speaker-job">- Doutor em História</span>
+
+											<p>Possui Pós-Doutorado em História das Relações Internacionais pela Universidade Federal Fluminense
+												(iniciado em 2014), Doutorado em História Social pela Pontifícia Universidade Católica de São Paulo (2005),
+												Mestrado em História do Brasil pela Universidade Federal de Pernambuco (1996) e Licenciatura e Bacharelado
+												em História pela Universidade Federal do Rio Grande do Norte (1992).
+											</p>
+
+											<!-- <div class="speaker-website">
+												<h4>Website</h4>
+												<a href="#">www.johndoe.com</a>
+											</div> -->
+
+											<div class="speaker-social">
+												<h4>Redes Sociais</h4>
+												<a href="#"><i class="fa fa-facebook"></i></a>
+												<a href="#"><i class="fa fa-twitter"></i></a>
+												<a href="#"><i class="fa fa-instagram"></i></a>
+												<a href="#"><i class="fa fa fa-linkedin"></i></a>
+											</div>
+
+											<div class="speaker-events">
+												<h4>Sessões</h4>
+												<div class="speaker-event">
+													<span>22 de Novembro, 2018 19 : 00 PM - 20 : 30 PM</span>
+													<p>Cristianismo, Política e Transformação Social no Brasil Contemporâneo</p>
+												</div>
+												<div class="speaker-event">
+													<span>22 de Novembro, 2018 20 : 30 PM - 22 : 00 PM</span>
+													<p>Mesa Redonda (Ciência e Fé) </p>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /speaker modal -->
+
 			</div>
 			<!-- /row -->
 		</div>
