--- a/public_html/index.html
+++ b/public_html/index.html
@@ -691,11 +691,62 @@
 											</div> -->
 
 											<div class="speaker-social">
-												<h4>Redes Sociais</h4>
+												<h4>Currículo Lattes</h4>
 												<a href="#"><i class="fa fa-facebook"></i></a>
-												<a href="#"><i class="fa fa-twitter"></i></a>
-												<a href="#"><i class="fa fa-instagram"></i></a>
-												<a href="#"><i class="fa fa fa-linkedin"></i></a>
+											</div>
+
+											<div class="speaker-events">
+												<h4>Sessões</h4>
+												<div class="speaker-event">
+													<span>22 de Novembro, 2018 19 : 00 PM - 20 : 30 PM</span>
+													<p>Cristianismo, Política e Transformação Social no Brasil Contemporâneo</p>
+												</div>
+												<div class="speaker-event">
+													<span>22 de Novembro, 2018 20 : 30 PM - 22 : 00 PM</span>
+													<p>Mesa Redonda (Ciência e Fé) </p>
+												</div>
+											</div>
+
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /speaker modal -->
+
+				<!-- speaker modal -->
+				<div id="speaker-modal-4" class="speaker-modal modal ">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<button type="button" class="speaker-modal-close" data-dismiss="modal"></button>
+							<div class="modal-body">
+								<div class="row">
+									<div class="col-md-5">
+										<div class="speaker-modal-img">
+											<img src="./img/p4.jpg" alt="">
+										</div>
+									</div>
+									<div class="col-md-7">
+										<div class="speaker-modal-content">
+											<h2 class="speaker-name">Edu Albuquerque</h2>
+											<span class="speaker-job">- Doutor em Geografia</span>
+
+											<p>Doutorado em Geografia (UFSC, 2007) professor adjunto da Universidade Federal do Rio Grande do Norte
+												(UFRN) e professor permanente do Programa de Põs-Graduação e Pesquisa em Geografia da UFRN (Mestrado e
+												Doutorado)
+
+											</p>
+
+											<!-- <div class="speaker-website">
+												<h4>Website</h4>
+												<a href="#">www.johndoe.com</a>
+											</div> -->
+
+											<div class="speaker-social">
+												<h4>Currículo Lattes</h4>
+												<a href="#"><i class="fa fa-facebook"></i></a>
 											</div>
 
 											<div class="speaker-events">
