"Alteração no texto..."

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -136,25 +136,15 @@
 							<div text align="left">
 								<p class="">O diálogo entre Ciência e Fé está na base dos fundamentos intelectuais da Ciência Moderna no
 									século XVI.
-									O processo de secularização nas ciências, bem como na sociedade,
-									tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
-									contribuíram diretamente para o avanço do desenvolvimento social,
-									tecnológico e dos direitos humanos. </p>
+									O processo de secularização nas ciências, bem como na sociedade, tentou suprimir o legado de cientistas que, a partir de uma cosmovisão cristã,
+									contribuíram diretamente para o avanço do desenvolvimento social, tecnológico e dos direitos humanos. </p>
 								<p class="">A II Semana de Ciência, Fé e Desenvolvimento Social traz como tema desse ano <b>“Cosmovisão para
-										Vida e
-										Desenvolvimento Social”</b> e apresenta como objetivos principais a discussão e a socialização de
-									teorias
-									e metodologias fundadas na
-									Cosmovisão Cristã para análises de realidades humanas compreendidas em sua totalidade humanística,
-									tecnológica,
-									social e espiritual. </p>
+										a Vida”</b> e apresenta como objetivos principais a discussão e a socialização de teorias a metodologias fundadas em suas cosmovisões para análises
+										de realidades humanas compreendidas em sua totalidade humanística, tecnológica, social e espiritual. </p>
 								<p class="">Desta forma, é com muita satisfação que convidamos toda comunidade acadêmica e sociedade civil
-									para
-									participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate
-									crítico
-									e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social
-									para
-									construção de uma sociedade mais justa e fraternalmente solidária.</p>
+									para participarem das Palestras, Workhshop e Mesas Redondas, contribuindo, assim, para promoção de um debate
+									crítico e para aprimoramento de habilidades e de competências do discurso científico e sua responsabilidade social
+									para construção de uma sociedade mais justa e fraternalmente solidária.</p>
 							</div>
 						</div>
 					</div>
