Alteração no texto participe.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -172,12 +172,10 @@
 				<div class="col-md-8 col-md-offset-2 ">
 					<div class="cta-content text-center">
 						<h2>Participe!</h2>
-						<p class="lead">Aproveite! O sistema de Inscrição será exclusivamente por meio do site, de acordo com o
-							cronograma do evento.</p>
-						<p class="lead">Somente receberão certificados os participantes que forem credenciados no local do evento, no dia
-							22 de Novembro de 2018. </p>
+						<p class="lead">As inscrições estão disponíveis e o credenciamento ocorrerá no local do evento, a partir do dia 22 de Novembro.</p>
+						<p class="lead">Os participantes credenciados receberão certificado de participação. </p>
 						<a href="https://www.eventbrite.com.br/e/ii-semana-de-ciencia-fe-e-desenvolvimento-social-tickets-52320870131?ref=ebtn"
-						 class="main-btn">Clique aqui e se inscreva</a>
+						 class="main-btn">Clique aqui e se inscreva!</a>
 					</div>
 				</div>
 				<!-- /cta content -->
@@ -360,7 +358,7 @@
 					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 30min</p>
+							<p class="event-time"><i class="fa fa-clock-o"></i> 15h : 00min - 17 : 00min</p>
 							<h3 class="event-title">Perspectiva histórica sobre a busca anatômica pela alma</h3>
 							<p>por <a href="" data-toggle="modal" data-target="#speaker-modal-2">Dr. Bento João</a></p>
 						</div>
@@ -371,7 +369,7 @@
 					<div class="event ">
 						<div class="event-hour"></div>
 						<div class="event-content">
-							<p class="event-time"><i class="fa fa-clock-o"></i>17 : 30min</p>
+							<p class="event-time"><i class="fa fa-clock-o"></i>17 : 00min</p>
 							<h3 class="event-title">Encerramento</h3>
 							<p><a href="#"></a></p>
 						</div>
